--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 *.dll
 *.so
 *.dylib
+*.sw?
+.project
+.DS_Store
+Thumbs.db
 
 # Test binary, built with `go test -c`
 *.test
@@ -13,3 +17,5 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.vscode
+.idea
